--- a/Views/Tablero/UpdateTablero.cshtml
+++ b/Views/Tablero/UpdateTablero.cshtml
@@ -21,3 +21,5 @@
 
     <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
+
+@section Scripts { <partial name="_ValidationScriptsPartial" /> }
