--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -1,18 +1,50 @@
 @model ViewModels.LoginViewModels
 
-<form asp-controller="Login" asp-action="LoginUser">
-    <div class="form-group">
-        <label asp-for="@Model.Usuario">Usuario</label>
-        <input asp-for="@Model.Usuario" class="form-control" />
-        <span asp-validation-for="@Model.Usuario" class="text-danger"></span>    
-    </div>
 
-    <div class="form-group">
-        <label asp-for="@Model.Password">Contraseña</label>
-        <input asp-for="@Model.Password" class="form-control" />
-        <span asp-validation-for="@Model.Password" class="text-danger"></span>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-login">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <h3 class="panel-title">Inicie sesión para continuar</h3>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <form asp-controller="Login" asp-action="LoginUser" method="post" role="form">
+                                <div class="form-group">
+                                    <label asp-for="@Model.Usuario">Usuario</label>
+                                    <input asp-for="@Model.Usuario" class="form-control"/>
+                                    <span asp-validation-for="@Model.Usuario" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="@Model.Password">Contraseña</label>
+                                    <input asp-for="@Model.Password" class="form-control" />
+                                    <span asp-validation-for="@Model.Password" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-sm-6 col-sm-offset-3">
+                                            <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
-</form>
+</div>
 
-@section Scripts { <partial name="_ValidationScriptsPartial" /> }
+@section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+}
+
+
