--- a/Views/Usuario/CreateUser.cshtml
+++ b/Views/Usuario/CreateUser.cshtml
@@ -4,17 +4,22 @@
 <form asp-controller="Usuario" asp-action="CreateUser">
     <div class="form-group">
         <label asp-for="@Model.Name">Nombre:</label>
-        <input asp-for="@Model.Name" class="form-control" />
+        <input asp-for="@Model.Name" class="form-control"/>
         <span asp-validation-for="@Model.Name" class="text-danger"></span>
-        
+    </div>
+
+    <div class="form-group">
         <label asp-for="@Model.Rol">Rol Usuario</label>
-        <select asp-for="@Model.Rol" asp-items="Html.GetEnumSelectList<tl2_tp10_2023_EnzoPeralta96.Models.RolUsuario>()" class="form-control">
+        <select asp-for="@Model.Rol" asp-items="Html.GetEnumSelectList<tl2_tp10_2023_EnzoPeralta96.Models.RolUsuario>()"
+            class="form-control">
             <option value="">-- Seleccionar --</option>
         </select>
         <span asp-validation-for="@Model.Rol" class="text-danger"></span>
+    </div>
 
+    <div class="form-group">
         <label asp-for="@Model.Password">Contraseña</label>
-        <input asp-for="@Model.Password class="form-control">
+        <input asp-for="@Model.Password" class="form-control"/>
         <span asp-validation-for="@Model.Password" class="text-danger"></span>
     </div>
 
@@ -22,6 +27,6 @@
 
 </form>
 
-@section Scripts { <partial name="_ValidationScriptsPartial" /> }
-
-
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
