--- a/Views/Tarea/TareasByTablero.cshtml
+++ b/Views/Tarea/TareasByTablero.cshtml
@@ -17,7 +17,10 @@
             <th>Descripcion</th>
             <th>Color</th>
             <th hidden>Id Usuario Asignado</th>
-            <th></th>
+            <th>Usuario asignado</th>
+            <th>Actualizar Estado</th>
+            <th>Editar</th>
+            <th>Eliminar</th>
         </tr>
     </thead>
     <tbody>
@@ -29,17 +32,74 @@
                 <td>@tarea.Nombre</td>
                 <td>@tarea.EstadoTarea</td>
                 <td>@tarea.Descripcion</td>
-                <td>@tarea.Color</td>
-                <td hidden>@tarea.Id_usuario_asignado</td>
                 <td>
-                    <a asp-controller="Tarea" asp-action="UpdateTarea" asp-route-idTarea="@tarea.Id">Editar</a>
-                    <a asp-controller="Tarea" asp-action="AsignarUser" asp-route-idTarea="@tarea.Id">Asginar Usuario</a>
-                    <a asp-controller="Tarea" asp-action="DeleteTarea" asp-route-idTableroDE="@tarea.Id_tablero" asp-route-idTareaDE="@tarea.Id" 
-                        onclick="return confirm('¿Estas seguro que quieres eliminar el elemento?')">Eliminar</a>
+                    <input type="color" asp-for="@tarea.Color" name="colorInput" value="@tarea.Color" disabled>
+                </td>
+                <td hidden>
+                    @tarea.Id_usuario_asignado
+                </td>
+                <td>
+
+                </td>
+                <td>
+                    <form asp-controller="Tarea" asp-action="UpdateEstado" method="post">
+                        <div class="d-flex align-items-center">
+
+                            <div>
+                                <input type="hidden" name="idTarea" value="@tarea.Id" />
+                                <select name="EstadoTarea"  class="form-select form-select-lg">
+                                    <option value="" disabled selected> Seleccionar </option>
+                                    <option value="ToDo">ToDo</option>
+                                    <option value="Doing">Doing</option>
+                                    <option value="Review">Review</option>
+                                    <option value="Done">Done</option>
+                                </select>
+                            </div>
+                            <div class="mx-2">
+                                <button type="submit" class="btn btn-success">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-upload" viewBox="0 0 16 16">
+                                        <path
+                                            d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5" />
+                                        <path
+                                            d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708z" />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </td>
+                <td>
+                    <a asp-controller="Tarea" asp-action="UpdateTarea" asp-route-idTarea="@tarea.Id">
+                        <button type="button" class="btn btn-primary">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                <path
+                                    d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                                <path fill-rule="evenodd"
+                                    d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
+                            </svg>
+                        </button>
+                    </a>
+                </td>
+                <td>
+                    <a asp-controller="Tarea" asp-action="DeleteTarea" asp-route-idTableroDE="@tarea.Id_tablero"
+                        asp-route-idTareaDE="@tarea.Id"
+                        onclick="return confirm('¿Estas seguro que quieres eliminar el elemento?')">
+                        <button type="button" class="btn btn-outline-danger">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-trash3" viewBox="0 0 16 16">
+                                <path
+                                    d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
+                            </svg>
+                        </button>
+                    </a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
 
-@section Scripts { <partial name="_ValidationScriptsPartial" /> }
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
