--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -1,50 +1,37 @@
 @model ViewModels.LoginViewModels
 
+<div class="d-flex flex-column">
+    
+    @if (Model.TieneMensajeDeError)
+    {
+        <p style="color: red;">@Model.MensajeDeError</p>
+    }
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-login">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <h3 class="panel-title">Inicie sesión para continuar</h3>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <form asp-controller="Login" asp-action="LoginUser" method="post" role="form">
-                                <div class="form-group">
-                                    <label asp-for="@Model.Usuario">Usuario</label>
-                                    <input asp-for="@Model.Usuario" class="form-control"/>
-                                    <span asp-validation-for="@Model.Usuario" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="@Model.Password">Contraseña</label>
-                                    <input asp-for="@Model.Password" class="form-control" />
-                                    <span asp-validation-for="@Model.Password" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <div class="row">
-                                        <div class="col-sm-6 col-sm-offset-3">
-                                            <button type="submit" class="btn btn-primary btn-block">Iniciar sesión</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+    <div class="border border-secondary-subtle" style="padding:10%;">
+
+        <h2>Inicio de sesión</h2>
+
+        <p style="padding-button:0.5%;">Ingrese su usario y contraseña para continuar</p>
+
+        <form asp-controller="Login" asp-action="LoginUser">
+            <div class="mb-3">
+                <label class="form-label" asp-for="@Model.Usuario"></label>
+                <input class="form-control" asp-for="@Model.Usuario" />
+                <span asp-validation-for="@Model.Usuario" class="text-danger"></span>
             </div>
-        </div>
+
+            <div class="mb-3">
+                <label class="form-label" asp-for="@Model.Password"></label>
+                <input class="form-control" asp-for="@Model.Password" />
+                <span asp-validation-for="@Model.Password" class="text-danger"></span>
+            </div>
+
+            <button type="submit"  class="btn btn-primary w-100 py-2" style="pading: 5%;">Iniciar sesión</button>
+        </form>
     </div>
+
 </div>
 
 @section Scripts {
-        <partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial" />
 }
-
-
