Agregado de helper y mejora TableroController

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                                         </li>
                                         <li>
                                             <a class="dropdown-item" asp-area="" asp-controller="Usuario"
-                                                asp-action="CreateUser">Crear usuario</a>
+                                                asp-action="Create">Crear usuario</a>
                                         </li>
                                     }
                                 </ul>
@@ -71,7 +71,7 @@
                                     </li>
                                     <li>
                                         <a class="dropdown-item" asp-area="" asp-controller="Tablero"
-                                            asp-action="CreateTablero">Crear tablero</a>
+                                            asp-action="Create">Crear tablero</a>
                                     </li>
                                 </ul>
                             </li>
