--- a/Views/Tablero/Update.cshtml
+++ b/Views/Tablero/Update.cshtml
@@ -1,28 +1,47 @@
 @model ViewModels.UpdateTableroViewModels;
 
-<form asp-controller="Tablero" asp-action="UpdateTablero">
-    <div class="form-group">
+<h2>Modificar tablero</h2>
 
+<p>Ingrese los siguientes datos:</p>
+
+<form asp-controller="Tablero" asp-action="Update">
+
+    <div class="mb-3">
         <input asp-for="@Model.Id">
         <span asp-validation-for="@Model.Id" class="text-danger"></span>
+    </div>
 
+    <div class="mb-3">
         <input asp-for="@Model.Id_usuario_propietario" class="form-control" readonly>
         <span asp-validation-for="@Model.Id_usuario_propietario" class="text-danger"></span>
+    </div>
 
+    <div class="mb-3">
         <label asp-for="@Model.Usuario_propietario"></label>
         <input asp-for="@Model.Usuario_propietario" class="form-control" readonly />
         <span asp-validation-for="@Model.Usuario_propietario" class="text-danger"></span>
+    </div>
 
+    <div class="mb-3">
         <label asp-for="@Model.Nombre"></label>
         <input asp-for="@Model.Nombre" class="form-control" />
         <span asp-validation-for="@Model.Nombre" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
 
         <label asp-for="@Model.Descripcion"></label>
         <input asp-for="@Model.Descripcion" class="form-control" />
         <span asp-validation-for="@Model.Descripcion" class="text-danger"></span>
     </div>
+   
 
     <button type="submit" class="btn btn-primary">Enviar</button>
+    <a asp-controller="Tablero" asp-action="Index">
+        <button type="button" class="btn btn-danger">
+            Cancelar
+        </button>
+    </a>
 </form>
 
 @section Scripts {
