--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -1,10 +1,10 @@
 @model ViewModels.LoginViewModels
 
 <div class="d-flex flex-column">
-    
+
     @if (Model.TieneMensajeDeError)
     {
-        <p style="color: red;">@Model.MensajeDeError</p>
+        <p id="mensajeTemporal" style="color: red;">@Model.MensajeDeError</p>
     }
 
     <div class="border border-secondary-subtle" style="padding:10%;">
@@ -26,7 +26,7 @@
                 <span asp-validation-for="@Model.Password" class="text-danger"></span>
             </div>
 
-            <button type="submit"  class="btn btn-primary w-100 py-2" style="pading: 5%;">Iniciar sesión</button>
+            <button type="submit" class="btn btn-primary w-100 py-2" style="pading: 5%;">Iniciar sesión</button>
         </form>
     </div>
 
@@ -35,3 +35,14 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var mensajeTemporal = document.getElementById('mensajeTemporal');
+        if (mensajeTemporal) {
+            setTimeout(function () {
+                mensajeTemporal.classList.add('mensaje-oculto');
+            }, 10000);
+        }
+    });
+</script>
