--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -6,7 +6,9 @@
 
 @if (Model.TieneMensajeDeError)
 {
-    <p style="color: red;">@Model.MensajeDeError</p>
+    <div id="mensajeTemporal" class="alert alert-warning">
+        @Model.MensajeDeError
+    </div>
 }
 
 <form asp-controller="Usuario" asp-action="Create">
@@ -18,7 +20,8 @@
 
     <div class="mb-3">
         <label asp-for="@Model.Rol"></label>
-        <select asp-for="@Model.Rol" asp-items="Html.GetEnumSelectList<tl2_tp10_2023_EnzoPeralta96.Models.Usuario.RolUsuario>()"
+        <select asp-for="@Model.Rol"
+            asp-items="Html.GetEnumSelectList<tl2_tp10_2023_EnzoPeralta96.Models.Usuario.RolUsuario>()"
             class="form-control"></select>
         <span asp-validation-for="@Model.Rol" class="text-danger"></span>
     </div>
@@ -35,9 +38,20 @@
             Cancelar
         </button>
     </a>
-
 </form>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var mensajeTemporal = document.getElementById('mensajeTemporal');
+        if (mensajeTemporal) {
+            setTimeout(function () {
+                mensajeTemporal.classList.add('mensaje-oculto');
+            }, 10000);
+        }
+    });
+</script>
+
